2017-11-28  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define parseFrameDesignation function.
	Fix parseFrameDesignation function.

2017-11-27  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define removeStyleElement function.
	Define inBlankWindow variable.
	Modify updateStyleElement function.

2017-11-26  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define updateStyleElement function.
	Define styleElementHeader constants.
	Define updateAllStyleElements function.

2017-11-25  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define insertedStyleElements variable;
	Define findStyleParent function.

2017-11-23  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define findFrameByMessage function.
	Define genericListener.listeners.initializeBlankWindows function.
	Define initBlankWindow function.

	* tryXpath/scripts/try_xpath_functions.js:
	Define findFrameElement function.
	Define findFrameIndex function.

	* tryXpath/scripts/try_xpath_content.js:
	Remove findFrameElement function.

2017-11-22  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define genericListener.listeners.initializeBlankWindows function.

2017-11-18  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Define isBlankWindow function.
	Define collectBlankWindows function.

2017-11-16  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Rename function name. changeFrameVisible -> changeFrameIdVisible.
	Define frameDesignationHeader, frameDesignationCheckbox,
	frameDesignationBody, frameDesignationExpression variables.
	Define changeFrameDesignationVisible function.
	Save and restore some states related to frameDesignation.
	Modify makeExecuteMessage fucntion.

	* tryXpath/popup/popup.html (Main):
	Add some elements related frameDesignation.
