@@ -1,3 +1,8 @@
+2017-11-29  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_content.js: 
+	Define createResultMessage function.
+	
 2017-11-28  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/scripts/try_xpath_content.js:
